region-utils.c: Squash a memory leak

"chunk" was an allocated but unused variable.

https://bugzilla.gnome.org/show_bug.cgi?id=649504